@@ -1,5 +1,9 @@
+============= Version 3.2 - 01-Feb-2012  =============
 
 
+    - Experimental TableV2 (version 2) has been added. Possible to merge cells, format cells and all features of V1.
+    - Issue 85: Create Image from InputStream
+    
 ============= Version 3.1 - 01-Feb-2012  =============
 
 Minor release. Applied patch for Identation and hiperlinks by whoahbot, Added some comments on methods, work in progress for special characters in Utils.java.
@@ -9,8 +13,7 @@ Minor release. Applied patch for Identation and hiperlinks by whoahbot, Added so
               Now you can NOT pass null to a table cell, which doens't make sense anyway. You have to pass "".
       
     - Issue 46:   Adding indentation
-    - Issue 45:   Adding hyperlinks to the document  
-    - Experimental TableV2 (version 2) has been added. Possible to merge cells, format cells and all features of V1. 
+    - Issue 45:   Adding hyperlinks to the document   
     - Removed all deprecated methods
 
 Upgrade steps:
